...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profil.ProfileFragment"
        android:background="@color/primaryBackgroundYellow">

    <androidx.cardview.widget.CardView
            android:id="@+id/Profil_profilCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
...
                      app:layout_constraintStart_toStartOf="@id/Profil_Name"
                      android:text="@string/name"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"
                      android:visibility="invisible"/>

            <TextView android:id="@+id/Profil_Bday"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@id/Profil_Name"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="30dp"
                      android:layout_marginTop="10dp"
...

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       app:layout_constraintTop_toBottomOf="@id/Profil_profilCard"
                                       android:layout_margin="10dp"
                                       app:cardCornerRadius="10dp"
                                       android:id="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:paddingBottom="10dp"
                                                           android:paddingTop="5dp"
                                                           android:paddingStart="10dp">
...
                    android:textSize="20sp"
                    android:textStyle="bold"
            />


            <TextView
                    android:id="@+id/Profil_city"
                    app:layout_constraintStart_toStartOf="@id/Login_Adrr"
                    app:layout_constraintTop_toBottomOf="@id/Login_Adrr"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/Profil_Editcity"
                    app:layout_constraintTop_toTopOf="@id/Profil_city"
                    app:layout_constraintEnd_toEndOf="@id/Profil_city"
                    app:layout_constraintBottom_toBottomOf="@id/Profil_city"
                    app:layout_constraintStart_toStartOf="@id/Profil_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="@dimen/mediumSize"
                    android:visibility="invisible"/>

            <TextView
                    android:id="@+id/Profil_Zip"
                    app:layout_constraintStart_toStartOf="@id/Profil_city"
                    app:layout_constraintTop_toBottomOf="@id/Profil_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip"
                    android:textSize="@dimen/mediumSize"
                    android:layout_marginTop="10dp"/>

            <EditText
                    android:id="@+id/Profil_EditZip"
                    app:layout_constraintTop_toTopOf="@id/Profil_Zip"
                    app:layout_constraintEnd_toEndOf="@id/Profil_Zip"
                    app:layout_constraintBottom_toBottomOf="@id/Profil_Zip"
                    app:layout_constraintStart_toStartOf="@id/Profil_Zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            android:layout_width="60dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primaryLightColor"
            android:id="@+id/floatingActionButton"
            android:src="@drawable/savefileoption" app:borderWidth="0dp"/>

    <!--<ImageView android:layout_width="60dp"
               android:layout_height="60dp"
               app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
               app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
...
