...
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primaryBackgroundYellow">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/add_new_grade"
              android:textSize="@dimen/mainSize"
              android:textStyle="bold"
              android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
                                       android:layout_margin="10dp" app:cardCornerRadius="10dp">
...
                      android:text="@string/subject"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"
                      android:layout_margin="10dp"/>

            <Spinner
                    android:id="@+id/add_grade_subject_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/add_grade_subject_text"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_subject_text"
                    app:layout_constraintEnd_toEndOf="@+id/add_grade_subject_text"
                    android:layout_margin="10dp">
...
                      android:text="@string/student"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"
                      android:layout_margin="10dp"/>

            <Spinner
                    android:id="@+id/add_grade_student_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/add_grade_student_text"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_student_text"
                    app:layout_constraintEnd_toEndOf="@+id/add_grade_student_text"
                    android:layout_margin="10dp">
...
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="@dimen/mainSize"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>

            <Spinner
                    android:id="@+id/add_grade_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/add_grade_text"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_text"
                    app:layout_constraintEnd_toEndOf="@+id/add_grade_text"
                    android:layout_margin="10dp"
...
                    app:layout_constraintStart_toEndOf="@+id/add_comment_icon"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/grade_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/comment"
                        android:inputType="textMultiLine"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"/>
...
