...

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/messages_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/send_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

            </androidx.recyclerview.widget.RecyclerView>



        <EditText android:id="@+id/talking_editText"
                android:layout_width="0dp"
                  android:layout_height="0dp"
                  app:layout_constraintTop_toTopOf="@id/send_button"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toStartOf="@id/send_button"
...
